--- a/apps/docker/Dockerfile
+++ b/apps/docker/Dockerfile
@@ -1,16 +1,16 @@
 FROM node:20-slim
 
-ENV HAMH_LOG_LEVEL "info"
-ENV HAMH_DISABLE_LOG_COLORS "false"
+ENV HAMH_LOG_LEVEL="info"
+ENV HAMH_DISABLE_LOG_COLORS="false"
 
-ENV HAMH_STORAGE_LOCATION "/data"
+ENV HAMH_STORAGE_LOCATION="/data"
 VOLUME /data
 
-ENV HAMH_WEB_PORT 8482
+ENV HAMH_WEB_PORT=8482
 EXPOSE 8482
 
-ENV HAMH_HOME_ASSISTANT_URL "http://x.x.x.x:yyyy"
-ENV HAMH_HOME_ASSISTANT_ACCESS_TOKEN "access-token"
+ENV HAMH_HOME_ASSISTANT_URL="http://x.x.x.x:yyyy"
+ENV HAMH_HOME_ASSISTANT_ACCESS_TOKEN="access-token"
 
 RUN mkdir /install
 COPY package.tgz /install/app.tgz
