chore: fix issue-management pipeline

--- a/.github/workflows/issue_comments.yml
+++ b/.github/workflows/issue_comments.yml
@@ -10,6 +10,9 @@ jobs:
     permissions:
       issues: write
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
       - name: Remove "waiting for feedback" label
         run: gh issue edit ${{ github.event.issue.number }} --remove-label "waiting for feedback"
         env:
