--- a/apps/home-assistant-matter-hub/package.json
+++ b/apps/home-assistant-matter-hub/package.json
@@ -50,8 +50,8 @@
     "pack": "mkdir -p pack && npm pack --pack-destination pack --json | jq -r .[0].filename > pack/package-name.txt"
   },
   "dependencies": {
-    "@project-chip/matter.js": "0.11.4",
-    "@project-chip/matter-node.js": "0.11.4",
+    "@matter/main": "0.11.4",
+    "@matter/nodejs": "0.11.4",
     "ajv": "8.17.1",
     "chalk": "5.3.0",
     "color": "4.2.3",
