--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -13,8 +13,8 @@
   },
   "dependencies": {
     "@home-assistant-matter-hub/common": "*",
-    "@project-chip/matter.js": "0.11.4",
-    "@project-chip/matter-node.js": "0.11.4",
+    "@matter/main": "0.11.4",
+    "@matter/nodejs": "0.11.4",
     "ajv": "8.17.1",
     "chalk": "5.3.0",
     "express": "4.21.1",
