--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,9 +10,6 @@ permissions:
   packages: write
   id-token: write
 
-env:
-  NX_CLOUD_ACCESS_TOKEN: ${{ secrets.NX_RELEASE_TOKEN }}
-
 jobs:
   main:
     runs-on: ubuntu-latest
@@ -29,6 +26,12 @@ jobs:
           node-version: 20
           cache: "npm"
           registry-url: https://registry.npmjs.org/
+      - name: NX cache
+        uses: actions/cache@v4
+        with:
+          path: .nx
+          key: ${{ runner.os }}-nx
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
       - name: Set up Docker Buildx
