--- a/apps/home-assistant-matter-hub/package.json
+++ b/apps/home-assistant-matter-hub/package.json
@@ -60,18 +60,19 @@
     "express-ip-access-control": "1.1.3",
     "home-assistant-js-websocket": "9.4.0",
     "lodash": "4.17.21",
+    "rimraf": "^6.0.1",
     "rxjs": "7.8.1",
     "strip-color": "0.1.0",
-    "yargs": "17.7.2",
     "winston": "3.17.0",
-    "ws": "8.18.0"
+    "ws": "8.18.0",
+    "yargs": "17.7.2"
   },
   "devDependencies": {
-    "@home-assistant-matter-hub/build-utils": "*",
     "@home-assistant-matter-hub/backend": "*",
-    "@home-assistant-matter-hub/frontend": "*",
+    "@home-assistant-matter-hub/build-utils": "*",
+    "@home-assistant-matter-hub/common": "*",
     "@home-assistant-matter-hub/documentation": "*",
-    "@home-assistant-matter-hub/common": "*"
+    "@home-assistant-matter-hub/frontend": "*"
   },
   "nx": {
     "targets": {
