--- a/packages/docs/package.json
+++ b/packages/docs/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0-alpha.65",
   "private": true,
   "scripts": {
-    "build": "myst build --html"
+    "build": "BASE_URL=/home-assistant-matter-hub myst build --html"
   },
   "dependencies": {
     "mystmd": "^1.3.22"
